implemented form. todo: changing state for conditional rendering of forms

--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,16 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> The apocalypse is coming
+    </title>
+    <link rel="stylesheet" href="../styles/style.css">
+    <script src="../node_modules/react/dist/react.js"></script>
+    <script src="../node_modules/react-dom/dist/react-dom.js"></script>
+    
+  </head>
+  <body>
+    <h1>CHECKOUT</h1>
+    <div id="app"></div>
+    <script src="../compiled/client/app.js"></script>
+  </body>
+</html>
